Work in progress - impl package objects working, loader still needs to be reworked
